--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     </head>
     
     <body>
-        Issued on 20225/06/29 : Subject : demonstartion & Test
+        Issued on 2022/08/30 : Subject : AMD　RadeonPRO W6400プロフェッショナルワークステーション向けグラフィックカードのご紹介
         <br>
-        <a href="https://mickey2go.github.io/demo/checker.pdf"> 
-             Link to checker.pdf
+        <a href="https://shinden252.github.io/marketing/RadeonPro-W6400-Datasheet.pdf"> 
+             Link to RadeonPro-W6400-Datasheet.pdf
         <br>
         </a>
         Issued on 2022/07/04 : Subject : Valid accounts test
         <br>
         <a href="https://xxx.github.io/demo/valid-test.pdf">
-            Link to vaild-test.pdf
+            Link to RadeonPro-W6400-Datasheet.pdf
         <br>
     </body>
 </html>
