--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     </head>
     
     <body>
+        ShindenHitex Digital Marketing Site
+        
         Issued on 2022/08/30 : Subject : AMD　RadeonPRO W6400プロフェッショナルワークステーション向けグラフィックカードのご紹介
         <br>
         <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> 
