--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="archives.css">
         <meta charset="utf-8">
+        <title>Welcome to Shinden Sales3 Group</title>
     </head>
     
     <body>
-        ShindenHitex Digital Marketing Site
-        
+        <p class="large-1">
+        Welcome to Shinden Digital Marketing Site.
+        <p class="small-1">
+        This is email archives previously sending as mail magazine to customers, it was organized by issued date & serial numbers.
+        You can find history of whitch email was sent to a customer by date & Number.
+
+        <p class="mid-1">
+        Email Archives
+        <p class="small-1">
         Issued on 2022/08/30 : Subject : AMD　RadeonPRO W6400プロフェッショナルワークステーション向けグラフィックカードのご紹介
         <br>
         <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> 
