--- a/index.html
+++ b/index.html
@@ -7,25 +7,30 @@
     </head>
     
     <body>
-        <p class="large-1">
+        <h1>
         Welcome to Shinden Digital Marketing Site.
-        <p class="small-1">
+        </h1>
+        <h3>
         This is email archives previously sending as mail magazine to customers, it was organized by issued date & serial numbers.
         You can find history of whitch email was sent to a customer by date & Number.
-
-        <p class="mid-1">
+        </h3>
+        
+        <h2>
         Email Archives
-        <p class="small-1">
+        </h2>
+        <p class="subject">
         Issued on 2022/08/30 : Subject : AMD　RadeonPRO W6400プロフェッショナルワークステーション向けグラフィックカードのご紹介
         <br>
         <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> 
              Link to Radeon-Pro-W6400-Datasheet.pdf
         <br>
-        </a>
+        </p></a>
+        <p class="subject">
         Issued on 2022/07/04 : Subject : Valid accounts test
         <br>
         <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf">
             Link to Radeon-Pro-W6400-Datasheet.pdf
         <br>
+        </p></a>
     </body>
 </html>
