--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <img src="shinden_logo.jpg" alt="Shinden's logo Image">
+        <img src="181206LOGO_01.jpg" alt="Shinden's logo Image">
         <h1>
         Welcome to Shinden Digital Marketing Site.
         </h1>
