--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     </head>
     
     <body>
-        <img src="181206LOGO_01.jpg" alt="Shinden's logo Image">
-        <h1>
-        Welcome to Shinden Digital Marketing Site.
-        </h1>
+        <div class="logo-box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></dev>
+        <div class="title-box"><h1>
+            Welcome to Shinden Digital Marketing Site.
+            </h1></div>
         <h3>
         This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
         You can find history of whitch email was sent to a customer by date & number.
