--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <div class="logo-box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></dev>
+        <div class="logo-box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></div>
         <div class="title-box"><h1>
             Welcome to Shinden Digital Marketing Site.
             </h1></div>
