--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     
     <body>
-        <div class="logo-box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="contain"></div>
-            <div class="title-box">
-            <h1>Welcome to Shinden Digital Marketing Site.<h1>
+        <div class="box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="contain"></div>
+            <div class="box">
+            Welcome to Shinden Digital Marketing Site.
             </div>
 
         <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
