--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <div class="box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="contain"></div>
+        <div class="box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></div>
             <div class="box">
             Welcome to Shinden Digital Marketing Site.
             </div>
