--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     
     <body>
         <div class="box"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></div>
-            <div class="box">
-            Welcome to Shinden Digital Marketing Site.
-            </div>
+        <h1>Welcome to Shinden Digital Marketing Site.</h1>
 
         <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
         You can find history of whitch email was sent to a customer by date & number.</h3>
