--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
     
     <body>
-        <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image" class="cover"></div>
+        <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image"></div>
         <div class="boxtitle">
         <h1>Welcome to Shinden Digital Marketing Site.</h1>
         </div>
