--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     </head>
     
     <body>
-        <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image"></div>
-        <div class="boxtitle">
-        <h1>Welcome to Shinden Digital Marketing Site.</h1>
+        <div class="boxtop">
+            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image"></div>
+            <div class="boxtitle">
+            <h1>Welcome to Shinden Digital Marketing Site.</h1>
+            </div>
         </div>
 
         <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
