--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     
     <body>
         <div class="boxtop">
-            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo Image"></div>
+            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo"></div>
             <div class="boxtitle">
-            <h1>Welcome to Shinden Digital Marketing Site.</h1>
+                <h1>Welcome to Shinden Digital Marketing Site.</h1>
             </div>
         </div>
 
