--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         You can find history of whitch email was sent to a customer by date & number.</h3>
         
         <h2>Email Attachements Archives</h2>
-        <p class="subject">
+        <div class="wrapper">
+            <div class="boxissue">ABC</div>
+            <p class="subject">
         Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード
         <br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a>
@@ -28,6 +30,7 @@
         <br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a>
         <br>
-        </p>
+            </p>
+        </div>
     </body>
 </html>
