--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     </head>
     
     <body>
-        <div class="wrapper">
-            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo"></div>
+        <div class="wrappertop">
+            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo">
+            </div>
             <div class="boxtitle">
                 <h1>Welcome to Shinden Digital Marketing Site.</h1>
             </div>
@@ -21,15 +22,15 @@
         <div class="wrapper">
             <div class="boxissue">ABC</div>
             <p class="subject">
-        Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード
-        <br>
+            Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード
+            <br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a>
-        <br>
+            <br>
         
-        Issued-002 on 2022/07/04 : Subject : accounts test
-        <br>
+            Issued-002 on 2022/07/04 : Subject : accounts test
+            <br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a>
-        <br>
+            <br>
             </p>
         </div>
     </body>
