--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     </head>
     
     <body>
-        <div class="wrappertop">
-            <div class="boxlogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo">
+        <div class="topline">
+            <div class="toplogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo">
             </div>
-            <div class="boxtitle">
-                <h1>Welcome to Shinden Digital Marketing Site.</h1>
+            <div class="toptitle">
+            <h1>Welcome to Shinden Digital Marketing Site.</h1>
             </div>
         </div>
 
