--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
         <div class="topline">
             <div class="toplogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo">
             </div>
-            <div class="toptitle">
+            <!--<div class="toptitle">-->
             <h1>Welcome to Shinden Digital Marketing Site.</h1>
-            </div>
+            <!--</div>-->
         </div>
 
         <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
