--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     </head>
     
     <body>
-        <div class="toptitle">
+        <div class="box">
             <div class="toplogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo"></div>
-            <h1>Welcome to Shinden Digital Marketing Site.</h1>
+            <div class="toptitle"><h1>Welcome to Shinden Digital Marketing Site.</h1></div>
         </div>
 
         <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
         You can find history of whitch email was sent to a customer by date & number.</h3>
         
         <h2>Email Attachements Archives</h2>
-        <div class="boxdata">
+        <div class="box">
             <div class="boxissue">Date of Issue</div>
             <p class="subject">
             Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
