--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <body>
         <div class="box">
-            <div class="toplogo"><img src="181206LOGO_01.jpg" alt="Shinden's logo"></div>
+            <div class="toplogo"><img src="181206LOGO_01.jpg" width="60" height="60" alt="Shinden's logo"></div>
             <div class="toptitle"><h1>Welcome to Shinden Digital Marketing Site.</h1></div>
         </div>
 
