--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         You can find history of whitch email was sent to a customer by date & number.</h3>
         
         <h2>Email Attachements Archives</h2>
+        <hr width="100%" color="green" size="5px"/>
         <div class="box">
             <div class="boxissue">Date of Issue</div>
             <p class="subject">
