--- a/index.html
+++ b/index.html
@@ -12,21 +12,21 @@
             <div class="toptitle"><h1>Welcome to Shinden Digital Marketing Site.</h1></div>
         </div>
 
-        <h3>This is email archives previously sending as mail magazine to customers, it was organized by issued date & issued number.
-        You can find history of whitch email was sent to a customer by date & number.</h3>
+        <h3>Here is archives of attachement previously sent to customers as email magazine, it was organized by issued date & issued number.
+        You can find history of email contents sent to a customer by date & number.</h3>
         
         <h2>Email Attachements Archives</h2>
         <hr width="100%" color="green" size="5px"/>
         <div class="box">
             <div class="boxissue">Date of Issue</div>
-            <p class="subject">
+            <p class="subject"><br>
             Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
-            <br>
+            <hr width="100%" color="green"/>
             <br>
             Issued-002 on 2022/07/04 : Subject : accounts test<br>
-            Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a>
-            <br>
+            Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+            <hr width="100%" color="green"/>
             <br>
             </p>
         </div>
