--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             <p class="subject"><br>
             Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
-            <hr width="100%" color="green"/>
+            <hr width="100%" color="green" size="1px"/>
             <br>
             Issued-002 on 2022/07/04 : Subject : accounts test<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
-            <hr width="100%" color="green"/>
+            <hr width="100%" color="green" size="1px"/>
             <br>
             </p>
         </div>
