--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <hr width="100%" color="green" size="5px"/>
         <div class="box">
             <div class="boxissue">Date of Issue</div>
+            <div class="boxdata">
             <p class="subject"><br>
             Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
@@ -29,6 +30,7 @@
             <hr width="100%" color="green" size="1px"/>
             <br>
             </p>
+            </div>
         </div>
     </body>
 </html>
