--- a/index.html
+++ b/index.html
@@ -17,14 +17,23 @@
         
         <h2>Email Attachements Archives</h2>
         <hr width="100%" color="green" size="5px"/>
+        <h3>Date of Issue</h3>
         <div class="box">
-            <div class="boxissue">Date of Issue</div>
+            <div class="boxissue">2022/08/30</div>
             <div class="boxdata">
             <p class="subject"><br>
-            Issued-001 on 2022/08/30 : Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
+            Issued-001:<br>
+            Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
             <hr width="100%" color="green" size="1px"/>
             <br>
+            </div>
+        </div>
+        
+        <div class="box">
+            <div class="boxissue">2022/09/06</div>
+            <div class="boxdata">
+            <p class="subject"><br>
             Issued-002 on 2022/07/04 : Subject : accounts test<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
             <hr width="100%" color="green" size="1px"/>
