--- a/index.html
+++ b/index.html
@@ -21,25 +21,26 @@
         <div class="box">
             <div class="boxissue">2022/08/30</div>
             <div class="boxdata">
-            <p class="subject"><br>
-            Issued-001:<br>
+            <p class="subject">
+            Issue#001:<br>
             Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
-            <hr width="100%" color="green" size="1px"/>
             <br>
             </div>
         </div>
+        <hr width="100%" color="green" size="1px"/>
         
         <div class="box">
             <div class="boxissue">2022/09/06</div>
             <div class="boxdata">
-            <p class="subject"><br>
-            Issued-002 on 2022/07/04 : Subject : accounts test<br>
+            <p class="subject">
+            Issue#002:<br>
+            Subject : accounts test<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
-            <hr width="100%" color="green" size="1px"/>
             <br>
             </p>
             </div>
         </div>
+        <hr width="100%" color="green" size="1px"/>
     </body>
 </html>
