--- a/index.html
+++ b/index.html
@@ -15,13 +15,16 @@
         <h3>Here is archives of attachement previously sent to customers as email magazine, it was organized by issued date & issued number.
         You can find history of email contents sent to a customer by date & number.</h3>
         
-        <h2>Email Attachements Archives</h2>
         <hr width="100%" color="green" size="5px"/>
+        <h2>Email Attachements Archives</h2>
+ 
         <h3>Date of Issue</h3>
+        <hr width="100%" color="green" size="1px"/>
+        
+        <p class="subject">
         <div class="box">
             <div class="boxissue">2022/08/30</div>
             <div class="boxdata">
-            <p class="subject">
             Issue#001:<br>
             Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
@@ -33,14 +36,13 @@
         <div class="box">
             <div class="boxissue">2022/09/06</div>
             <div class="boxdata">
-            <p class="subject">
             Issue#002:<br>
             Subject : accounts test<br>
             Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
             <br>
-            </p>
             </div>
         </div>
         <hr width="100%" color="green" size="1px"/>
+        </p>
     </body>
 </html>
