--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
             <div class="boxdata">
             Issue#001:<br>
             Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
-            Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+            Message Contents:
+            Attachement:<a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+            Author: Ozeki<br>
             <br>
             </div>
         </div>
@@ -38,7 +40,9 @@
             <div class="boxdata">
             Issue#002:<br>
             Subject : accounts test<br>
-            Link to <a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+            Message Contents:
+            Attachement:<a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+            Author:<br>
             <br>
             </div>
         </div>
