--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
             <div class="boxissue">2022/08/30</div>
             <div class="boxdata">
             Issue#001:<br>
-            Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカード<br>
-            Message Contents:
+            Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカードの紹介<br>
+            Message Contents:<br>
+                <br>
             Attachement:<a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
             Author: Ozeki<br>
             <br>
@@ -40,7 +41,8 @@
             <div class="boxdata">
             Issue#002:<br>
             Subject : accounts test<br>
-            Message Contents:
+            Message Contents:<br>
+                <br>
             Attachement:<a href="https://shinden252.github.io/marketing/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
             Author:<br>
             <br>
