--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         
         <p class="subject">
         <div class="box">
-            <div class="boxissue" style="flex-basis=30%;">2022/08/30</div>
-            <div class="boxdata" style="flex-basis=70%;">
+            <div class="boxissue">2022/08/30          </div>
+            <div class="boxdata">
             Issue#001:<br>
             Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカードの紹介<br>
             Message Contents:<br>
@@ -37,7 +37,7 @@
         <hr width="100%" color="green" size="1px"/>
         
         <div class="box">
-            <div class="boxissue" style="flex-basis=30%;">2022/09/06</div>
+            <div class="boxissue">2022/09/06          </div>
             <div class="boxdata">
             Issue#002:<br>
             Subject : accounts test<br>
