--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
         <!-- Here is Contents Divider -->
         <div class="box">
             <div class="box-date">
-                2022/mm/dd
+                2022/09/01
             </div>
             <div class="box-contents">
                 Issue#002:<br>
-                Subject : accounts test<br>
-                Message Contents: <a href="./001-20220830/001.html"> Click Here</a><br>
-                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+                Subject : IoT/5G時代に向けたシンデンハイテックスからのご提案<br>
+                Message Contents: <a href="./002-20220901/002.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/002-20220901/Telit Product Lineup_20220819.pdf"> Telit Product Lineup_20220819.pdf</a><br>
                 Author:<br>
                 <br>
             </div>
@@ -65,13 +65,13 @@
         <!-- Here is Contents Divider -->
         <div class="box">
             <div class="box-date">
-                2022/mm/dd
+                2022/09/02
             </div>
             <div class="box-contents">
                 Issue#003:<br>
-                Subject : accounts test<br>
-                Message Contents: <a href="./001-20220830/001.html"> Click Here</a><br>
-                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
+                Subject : GIGABYTE製Ampere Altra Armプロセッサ対応のサーバーボード製品MP72-HB0のご紹介<br>
+                Message Contents: <a href="./003-20220902/003.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/003-20220902/MP72-HB0_datasheet_v1.0.pdf"> MP72-HB0_datasheet_v1.0.pdf</a><br>
                 Author:<br>
                 <br>
             </div>
