--- a/001-20220830/001.html
+++ b/001-20220830/001.html
@@ -12,9 +12,14 @@
         <h3>Message Content :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
-            Email<br>
-            <img src=" "alt="Image File"><br>
-            Email<br>
+            今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
+            <img src="221230452 AMD RPRO W6400 300x250 V3D1.jpg" alt="Image File"><br>
+            AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
+            ①16MBのGraphics Cache（L3)メモリーを実装。<br>
+            ②同社従来製品と同等な電力消費でありながら、最大で4倍の性能を発揮。<br>
+            ③ロープロファイル、シングルスロット形状により、mini-ITX等の小型MBへの実装可能。<br>
+            <br>
+            お客様向け貸し出し機材も準備中。お気軽に営業担当へお問合せください。お待ち申し上げます。<br>
         </p>
         <hr width="100%" color="green" size="1px"/>
     </body>
