--- a/001-20220830/001.html
+++ b/001-20220830/001.html
@@ -9,11 +9,11 @@
     <body>
         <h3>Date of Issued :2022/08/30</h3>
         <h3>Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカードの紹介<br>
-        <h3>Message Content :</h3>
+        <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
-            <img src="./001-20220830/221230452 AMD RPRO W6400 300x250 V3D1.jpg" alt="Image File"><br>
+            <img src="221230452_AMD_RPRO_W6400_300x250_V3D1.jpg" alt="Image File"><br>
             AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
             ①16MBのGraphics Cache（L3)メモリーを実装。<br>
             ②同社従来製品と同等な電力消費でありながら、最大で4倍の性能を発揮。<br>
