--- a/001-20220830/001.html
+++ b/001-20220830/001.html
@@ -12,14 +12,23 @@
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
-            今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
-            <img src="./221230452_AMD_RPRO_W6400_300x250_V3D1.jpg" alt="Image File"><br>
-            AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
-            ①16MBのGraphics Cache（L3)メモリーを実装により、実効メモリ帯域幅の拡大。<br>
-            ②同社従来製品と同等な電力消費でありながら、最大で4倍の性能を発揮。<br>
-            ③ロープロファイル、シングルスロット形状により、mini-ITX等の小型MBへの実装可能。<br>
-            <br>
-            お客様向け貸し出し機材も準備中。お気軽に営業担当へお問合せください。お待ち申し上げます。<br>
+            <div class="box-mail">
+                今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
+            </div>
+            <div class="box-img">
+                <img src="./221230452_AMD_RPRO_W6400_300x250_V3D1.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-mail">
+                AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
+                <ol type="A">
+                    <li>16MBのGraphics Cache（L3)メモリーを実装により、実効メモリ帯域幅の拡大。<br></li>
+                    <li>同社従来製品と同等な電力消費でありながら、最大で4倍の性能を発揮。<br></li>
+                    <li>ロープロファイル、シングルスロット形状により、mini-ITX等の小型MBへの実装可能。<br></li>
+                </ol>
+                <br>
+                お客様向け貸し出し機材も準備中。お気軽に営業担当へお問合せください。<br>
+                お待ち申し上げます。<br>
+            </div
         </p>
         <hr width="100%" color="green" size="1px"/>
     </body>
