--- a/001-20220830/001.html
+++ b/001-20220830/001.html
@@ -8,11 +8,12 @@
 
     <body>
         <h3>Date of Issued :2022/08/30</h3>
-        <h3>Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカードの紹介<br>
+        <h3>Subject : AMD Radeon™ PRO W6400 AMD RDNA™ 2アーキテクチャーグラフィックカードの紹介<br>
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             <div class="box-mail">
+                弊社ではお客様のお役に立つ最新情報、主にサーバ関係、組み込み向けマザーボードや通信モジュール等技術情報を、タイムリーに提供させていただくために、メールマガジンを定期的に発信してまいります。皆様のご意見やご感想などをお聞かせていただければ幸いです。<br>
                 今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
             </div>
             <div class="box-img">
@@ -22,7 +23,7 @@
                 AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
                 <ol type="A">
                     <li>16MBのGraphics Cache（L3)メモリーを実装により、実効メモリ帯域幅の拡大。<br></li>
-                    <li>同社従来製品と同等な電力消費でありながら、最大で4倍の性能を発揮。<br></li>
+                    <li>同社従来製品と同等な電力消費でありながら、AMD GCNに比べ約1.倍の性能を発揮。<br></li>
                     <li>ロープロファイル、シングルスロット形状により、mini-ITX等の小型MBへの実装可能。<br></li>
                 </ol>
                 <br>
