--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
         <hr width="100%" color="green" size="5px"/>
         <p class="main-text">
   
-        <!-- Here is Contents Divider -->
+        <!--  Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
                 2022/08/30<br>
             </div>
             <div class="box-contents">
                 Issue#001:<br>
-                Subject : AMD RadeonPRO W6400, RNDA2アーキテクチャーグラフィックカードの紹介<br>
+                Subject : AMD Radeon™ PRO W6400 AMD RDNA™ 2アーキテクチャーグラフィックカードの紹介<br>
                 Message Contents:<br>
                 Message Contents: <a href="./001-20220830/001.html"> Click Here</a><br>
                 Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/Radeon-Pro-W6400-Datasheet.pdf"> Radeon-Pro-W6400-Datasheet.pdf</a><br>
@@ -45,7 +45,7 @@
         <hr width="100%" color="green" size="1px"/>
         <!-- End of Repeated -->
     
-        <!-- Here is Contents Divider -->
+        <!--  Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
                 2022/09/01
@@ -53,16 +53,16 @@
             <div class="box-contents">
                 Issue#002:<br>
                 Subject : IoT/5G時代に向けたシンデンハイテックスからのご提案<br>
-                Message Contents: <a href="./002-20220901/002.html"> Click Here</a><br>
-                Attachement:<a href="https://shinden252.github.io/marketing/002-20220901/Telit Product Lineup_20220819.pdf"> Telit Product Lineup_20220819.pdf</a><br>
-                Author:<br>
+                Message Contents: <a href="./001-20220830/002.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/Telit Product Lineup_20220819.pdf"> Telit Product Lineup_20220819.pdf</a><br>
+                Author:Umemoto<br>
                 <br>
             </div>
         </div>     
         <hr width="100%" color="green" size="1px"/>
         <!-- End of Repeated -->
         
-        <!-- Here is Contents Divider -->
+        <!--  Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
                 2022/09/02
@@ -70,14 +70,31 @@
             <div class="box-contents">
                 Issue#003:<br>
                 Subject : GIGABYTE製Ampere Altra Armプロセッサ対応のサーバーボード製品MP72-HB0のご紹介<br>
-                Message Contents: <a href="./003-20220902/003.html"> Click Here</a><br>
-                Attachement:<a href="https://shinden252.github.io/marketing/003-20220902/MP72-HB0_datasheet_v1.0.pdf"> MP72-HB0_datasheet_v1.0.pdf</a><br>
-                Author:<br>
+                Message Contents: <a href="./001-20220830/003.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/001-20220902/MP72-HB0_datasheet_v1.0.pdf"> MP72-HB0_datasheet_v1.0.pdf</a><br>
+                Author:Aoshima<br>
                 <br>
             </div>
         </div>     
         <hr width="100%" color="green" size="1px"/>
-        <!-- End of Repeated -->
+        <!-- End of Repeat -->
+
+        <!-- Start of Reperts for next contents -->
+        <div class="box">
+            <div class="box-date">
+                2022/09/02
+            </div>
+            <div class="box-contents">
+                Issue#004:<br>
+                Subject : GIGABYTE製 AMD EPYC対応の2U8GPU規格GPUサーバー製品R282-Z40のご紹介<br>
+                Message Contents: <a href="./001-20220830/004.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/G292-Z40_datasheet_v1.0.pdf"> G292-Z40_datasheet_v1.0.pdf</a><br>
+                Author:Aoshima<br>
+                <br>
+            </div>
+        </div>     
+        <hr width="100%" color="green" size="1px"/>
+        <!-- End of Repeat -->
 
         </p>
     </body>
