--- a/001-20220830/002.html
+++ b/001-20220830/002.html
@@ -22,7 +22,7 @@
                 <br>
             </div>
             <div class="box-img">
-                <img src="./Telit Web Capture_20220819.jpg" alt="Image File"><br>
+                <img src="./Telit Web Capture_20220819.jpeg" alt="Image File"><br>
             </div>
             <div class="box-mail">
                 Telitは、LPWA～5G、WiF/Blutoothの各種通信規格に適合した製品をラインアップとして持つワイヤレス通信モジュールのリーディングサプライヤーです。<br>
