--- a/001-20220830/004.html
+++ b/001-20220830/004.html
@@ -22,7 +22,7 @@
                 <br>
             </div>
             <div class="box-img">
-                <img src="./G292-Z40.jpg" alt="Image File"><br>
+                <img src="./G292-Z40.png" alt="Image File"><br>
             </div>
             <div class="box-mail">
                 <br>
