--- a/001-20220830/003.html
+++ b/001-20220830/003.html
@@ -22,7 +22,7 @@
                 <br>
             </div>
             <div class="box-img">
-                <img src="./MP72-HB0 (rev. 1.0).png" alt="Image File"><br>
+                <img src="./MP72-HB0_rev_1_0.png" alt="Image File"><br>
             </div>
             <div class="box-mail">
                 MP72-HB0 (rev. 1.0) は、CPUをDual搭載可能とし128コアまでサポートしているE-ATXのマザーボードです。メモリは8ch最大4TBのRDIMM/LRDIMMに対応します。　TDP250W<br>
