--- a/001-20220830/004.html
+++ b/001-20220830/004.html
@@ -18,7 +18,7 @@
                 <br>
                 皆様のご意見やご感想などをお聞かせていただければ幸いです。<br>
                 <br>
-                2Uシャーシに最大8GPU搭載可能なServerです。AI,AI Training 及びHPC向けをメインアプリケーションとしていますが、多方面での導入実績も多い製品です。マザーボードにはMZ42-G20を搭載し、CPUはDualサポートしています。<br>
+                今回ご紹介する製品は、2Uシャーシに最大8GPU搭載可能なServerです。AI,AI Training 及びHPC向けをメインアプリケーションとしていますが、多方面での導入実績も多い製品です。マザーボードにはMZ42-G20を搭載し、CPUはDualサポートしています。<br>
                 <br>
             </div>
             <div class="box-img">
