--- a/001-20220830/003.html
+++ b/001-20220830/003.html
@@ -18,7 +18,7 @@
                 <br>
                 皆様のご意見やご感想などをお聞かせていただければ幸いです。<br>
                 <br>
-                Ampere の Altra® プロセッサ ファミリは、予測可能なパフォーマンス、高いスケーラビリティ、および電力効率を提供するように設計されています。 これらすべての指標における Ampere のリーダーシップは、クラウド サービス プロバイダーに卓越した結果をもたらし、TCO を削減します。<br>
+                今回ご紹介する、Ampere の Altra® プロセッサ ファミリは、予測可能なパフォーマンス、高いスケーラビリティ、および電力効率を提供するように設計されています。 これらすべての指標における Ampere のリーダーシップは、クラウド サービス プロバイダーに卓越した結果をもたらし、TCO を削減します。<br>
                 <br>
             </div>
             <div class="box-img">
