--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
             </div>
         </div>
 
-        <h3>Here is archives of attachement previously sent to customers as email magazine, it was organized by issued date & issued number.
-        You can find history of email contents sent to a customer by date & number.</h3>
+        <h3>Here is archives of attachment previously sent to customers as email magazine, it was organized by issue date & number.
+        You can find history of email contents depends on date & number.</h3>
         
         <hr width="100%" color="green" size="5px"/>
         <h2>Email Attachements Archives</h2>
@@ -48,7 +48,7 @@
         <!--  Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
-                2022/09/01
+                2022/09/dd
             </div>
             <div class="box-contents">
                 Issue#002:<br>
@@ -65,7 +65,7 @@
         <!--  Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
-                2022/09/02
+                2022/09/dd
             </div>
             <div class="box-contents">
                 Issue#003:<br>
@@ -82,7 +82,7 @@
         <!-- Start of Reperts for next contents -->
         <div class="box">
             <div class="box-date">
-                2022/09/02
+                2022/09/dd
             </div>
             <div class="box-contents">
                 Issue#004:<br>
