--- a/001-20220830/001.html
+++ b/001-20220830/001.html
@@ -14,17 +14,20 @@
         <p class="main-text">
             <div class="box-mail">
                 弊社ではお客様のお役に立つ最新情報、主にサーバ関係、組み込み向けマザーボードや通信モジュール等技術情報を、タイムリーに提供させていただくために、メールマガジンを定期的に発信してまいります。皆様のご意見やご感想などをお聞かせていただければ幸いです。<br>
-                今回は、弊社が正規代理店として製品取り扱いのある、AMD社RadeonPROシリーズワークステーション向けグラフィックカードについてご紹介をいたします。<br>
+                今回は、弊社が正規代理店として製品取り扱いのある、AMD Radeon™ PRO W6400ワークステーション向けグラフィックカードについてご紹介をいたします。<br>
             </div>
             <div class="box-img">
                 <img src="./221230452_AMD_RPRO_W6400_300x250_V3D1.jpg" alt="Image File"><br>
             </div>
             <div class="box-mail">
-                AMD RADEON PRO W6400はW6000シリーズのエントリー向けGPUカード製品であり、最新のGPUアーキテクチャーの採用にて以下の特徴があります。<br>
+                AMD RADEON PRO W6400はエントリー向けGPUカード製品です。最新のGPUアーキテクチャーの採用、以下の特徴があります。<br>
                 <ol type="A">
-                    <li>16MBのGraphics Cache（L3)メモリーを実装により、実効メモリ帯域幅の拡大。<br></li>
-                    <li>同社従来製品と同等な電力消費でありながら、AMD GCNに比べ約1.倍の性能を発揮。<br></li>
-                    <li>ロープロファイル、シングルスロット形状により、mini-ITX等の小型MBへの実装可能。<br></li>
+                    <li>①4GB のハイパフォーマンス・メモリー。<br></li>
+                    <li>②ハードウェア レイ・トレーシングを提供。<br></li>
+                    <li>③Ultra-HD HDR ディスプレイ 2 台に最適化。<br></li>
+                    <li>④ソフトウェア・マルチタスクのアクセラレート。<br></li>
+                    <li>⑤PCIe® 4.0 の高度なデータ転送速度を実現。<br></li>
+                    <li>⑥多数の汎用アプリケーションで認証。<br></li>
                 </ol>
                 <br>
                 お客様向け貸し出し機材も準備中。お気軽に営業担当へお問合せください。<br>
