--- a/006-20221014/006.html
+++ b/006-20221014/006.html
@@ -1,1 +1,41 @@
-####
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="../archives.css">
+        <meta charset="utf-8">
+        <title>Welcome to Shinden Sales3 Group</title>
+    </head>
+
+    <body>
+        <h3>Date of Issued :2022/08/30</h3>
+        <h3>Subject : 第13回 Japan IT Week秋 TUL社出展のご案内<br>
+        <h3>Message Contents :</h3>
+        <hr width="100%" color="green" size="1px"/>
+        <p class="main-text">
+            <div class="box-mail">
+                この度弊社は2022年10月26日（水）から28日（金）まで幕張メッセで開催されます「第13回Japan IT Week 秋」に出展する運びとなりましたので、ご案内申し上げます。<br>
+                当社ブースでは最新のAMD EPYC、RYZEN搭載GIGABYTE社サーバー、GIGAIPC社 、Xilinx社Alveo、Telit社の5G/LTE、及びWiFiモジュール、MultiTech社のLoRaなどをご紹介、ご覧いただけるようになっております。<br>
+                <br>
+                第13回 IoT&5Gソリューション 展【秋】<br>
+                <br>
+                名称：第13回 Japan IT Week秋 / IoT&5Gソリューション 展【秋】<br>
+                会期：10月26日(水)から10月28日(金) まで 10:00～18:00（最終日のみ17:00終了）<br>
+                ブース案内：幕張メッセ、第4ホール、15-43ブース<br>
+                IT Week 公式Website <br>
+            </div>
+            <div class="box-img">
+                <img src="./E9550.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-img">
+                <img src="./E9260.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-img">
+                <img src="./E917x.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-img">
+                <img src="./6000.jpg" alt="Image File"><br>
+            </div>
+        </p>
+        <hr width="100%" color="green" size="1px"/>
+    </body>
+</html>
