--- a/index.html
+++ b/index.html
@@ -96,6 +96,40 @@
         <hr width="100%" color="green" size="1px"/>
         <!-- End of Repeat -->
 
+        <!-- Start of Reperts for next contents -->
+        <div class="box">
+            <div class="box-date">
+                2022/10/13
+            </div>
+            <div class="box-contents">
+                Issue#005:<br>
+                Subject : 第13回 Japan IT Week秋 出展のご案内 (IoT&5Gソリューション 展【秋】<br>
+                Message Contents: <a href="./005-20221013/005.html"> Click Here</a><br>
+                Attachement:<a href="https://www.japan-it-autumn.jp/ja-jp/search/directory/directory-details.org-733119b8-5492-4b80-9102-859b48a79255.html#/"> Link to Website</a><br>
+                Author:Aoshima<br>
+                <br>
+            </div>
+        </div>     
+        <hr width="100%" color="green" size="1px"/>
+        <!-- End of Repeat -->
+
+        <!-- Start of Reperts for next contents -->
+        <div class="box">
+            <div class="box-date">
+                2022/10/14
+            </div>
+            <div class="box-contents">
+                Issue#006:<br>
+                Subject :第13回 Japan IT Week秋 TUL社出展のご案内 <br>
+                Message Contents: <a href="./006-20221014/006.html"> Click Here</a><br>
+                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/G292-Z40_datasheet_v1.0.pdf"> Link to Website</a><br>
+                Author:Ozeki<br>
+                <br>
+            </div>
+        </div>     
+        <hr width="100%" color="green" size="1px"/>
+        <!-- End of Repeat -->
+
         </p>
     </body>
 </html>
