--- a/006-20221014/006.html
+++ b/006-20221014/006.html
@@ -13,14 +13,14 @@
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             <div class="box-mail">
-                この度弊社は2022年10月26日（水）から28日（金）まで幕張メッセで開催されます「第13回Japan IT Week 秋」に出展する運びとなりましたので、ご案内申し上げます。<br>
-                当社ブースでは最新のAMD EPYC、RYZEN搭載GIGABYTE社サーバー、GIGAIPC社 、Xilinx社Alveo、Telit社の5G/LTE、及びWiFiモジュール、MultiTech社のLoRaなどをご紹介、ご覧いただけるようになっております。<br>
+                弊社パートナー台湾TUL社は、10月26日より28日迄、幕張メッセにて開催予定のIT Week 2022秋へ出展の運びとなりました。ご案内をさせていただきます。<br>
+                台湾TUL社は、AMD社パートナーカスタマーの一つとして、RadeonブランドGPUカードを供給させていただいており、弊社でもその取扱いを行っております。<br>
                 <br>
                 第13回 IoT&5Gソリューション 展【秋】<br>
                 <br>
                 名称：第13回 Japan IT Week秋 / IoT&5Gソリューション 展【秋】<br>
                 会期：10月26日(水)から10月28日(金) まで 10:00～18:00（最終日のみ17:00終了）<br>
-                ブース案内：幕張メッセ、第4ホール、15-43ブース<br>
+                ブース案内：幕張メッセ、19-25ブース<br>
                 IT Week 公式Website <br>
             </div>
             <div class="box-img">
