--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 Issue#005:<br>
                 Subject : 第13回 Japan IT Week秋 出展のご案内 (IoT&5Gソリューション 展【秋】<br>
                 Message Contents: <a href="./005-20221013/005.html"> Click Here</a><br>
-                Attachement:<a href="https://www.japan-it-autumn.jp/ja-jp/search/directory/directory-details.org-733119b8-5492-4b80-9102-859b48a79255.html#/"> Link to Website</a><br>
+                Attachement:<a href="https://www.japan-it-autumn.jp/ja-jp/search/directory/directory-details.org-733119b8-5492-4b80-9102-859b48a79255.html#/"> Link to IT Week 2022 Website</a><br>
                 Author:Aoshima<br>
                 <br>
             </div>
@@ -122,7 +122,7 @@
                 Issue#006:<br>
                 Subject :第13回 Japan IT Week秋 TUL社出展のご案内 <br>
                 Message Contents: <a href="./006-20221014/006.html"> Click Here</a><br>
-                Attachement:<a href="https://shinden252.github.io/marketing/001-20220830/G292-Z40_datasheet_v1.0.pdf"> Link to Website</a><br>
+                Attachement:<a href="https://www.shinden.co.jp/products/category/card_board/tul.html"> Link to Shinden Website</a><br>
                 Author:Ozeki<br>
                 <br>
             </div>
