--- a/007-20221017/007.html
+++ b/007-20221017/007.html
@@ -1,1 +1,40 @@
-####
+<!DOCTYPE html>
+<html>
+    <head>
+        <link rel="stylesheet" href="../archives.css">
+        <meta charset="utf-8">
+        <title>Welcome to Shinden Sales3 Group</title>
+    </head>
+
+    <body>
+        <h3>Date of Issued :2022/10/17</h3>
+        <h3>Subject : 第13回 Japan IT Week秋 iBASE出展のご案内<br>
+        <h3>Message Contents :</h3>
+        <hr width="100%" color="green" size="1px"/>
+        <p class="main-text">
+            <div class="box-mail">
+                弊社パートナーの台湾に本社を置くiBASE社は、10月26日より28日迄、幕張メッセにて開催予定のIT Week 2022秋へ、出展の運びとなりましたのでご案内をさせていただきます。<br>
+                iBASE社は、現在台湾の三重、新荘、平鎮にそれぞれ製造拠点を有しており、厳格な品質管理を実施し、100％台湾製造の優れた産業用コンピュータ製品を提供しています。また、AMD Ryzen™　Embeddedプロセッサを搭載しました、多くの製品を提供しており、弊社はその販売パートナーとして営業活動をさせていただいております。<br>
+                <br>
+                本展示会では、好評発売中であります、AMD Ryzen™ Embeddedプロセッサ搭載産業用コンピュータ、SBCやシステムモジュールを展示し、お客様のご来場をお待ち申し上げます。<br>
+                <br>
+                第13回 IoT&5Gソリューション 展【秋】<br>
+                <br>
+                名称：第13回 Japan IT Week秋 / IoT&5Gソリューション 展【秋】<br>
+                会期：10月26日(水)から10月28日(金) まで 10:00～18:00（最終日のみ17:00終了）<br>
+                ブース案内：幕張メッセ、小間番号16-36 <br>
+                IT Week 公式Website <br>
+            </div>
+            <div class="box-img">
+                <img src="./IB952.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-img">
+                <img src="./MI993.jpg" alt="Image File"><br>
+            </div>
+            <div class="box-img">
+                <img src="./ET977.jpg" alt="Image File"><br>
+            </div>
+        </p>
+        <hr width="100%" color="green" size="1px"/>
+    </body>
+</html>
