--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <hr width="100%" color="green" size="5px"/>
         <h2>Email Attachements Archives</h2>
             <div class="align-right">
-                <h3>As of 2022/10/13</h3>
+                <h3>As of 2022/10/14</h3>
             </div>
         <hr width="100%" color="green" size="5px"/>
         <p class="main-text">
@@ -129,7 +129,24 @@
         </div>     
         <hr width="100%" color="green" size="1px"/>
         <!-- End of Repeat -->
-
+        
+        <!-- Start of Reperts for next contents -->
+        <div class="box">
+            <div class="box-date">
+                2022/10/17
+            </div>
+            <div class="box-contents">
+                Issue#007:<br>
+                Subject :第13回 Japan IT Week秋 iBASE社出展のご案内 <br>
+                Message Contents: <a href="./007-20221017/007.html"> Click Here</a><br>
+                Attachement:<a href="https://www.japan-it-autumn.jp/ja-jp/search/directory/directory-details.org-c4875604-ba02-493e-9d9f-2a14b2e94b9c.html#/"> Link to IT Week 2022 Website</a><br>
+                Author:Ozeki<br>
+                <br>
+            </div>
+        </div>     
+        <hr width="100%" color="green" size="1px"/>
+        <!-- End of Repeat -->
+        
         </p>
     </body>
 </html>
