--- a/008/008.html
+++ b/008/008.html
@@ -7,21 +7,32 @@
     </head>
 
     <body>
-        <h3>Date of Issued :2022/11/01</h3>
-        <h3>Subject : V3000<br>
+        <h3>Date of Issued :2022/11/08</h3>
+        <h3>Subject : 「Zen 3」CPUがV3000シリーズとして組み込み向けへ登場。<br>
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             <div class="box-mail">
+                パフォーマンス、電力効率に優れたアドバンテージを持つ、信頼性の高い 「常時稼働」 のストレージ＆ネットワーク・システムを実現する、V3000を紹介いたします。<br>
                 <br>
+                ハイパフォーマンス 「Zen 3」 CPU x86 コア・アーキテクチャーを採用したAMD Ryzen™ Embedded V3000 プロセッサーが、Vシリーズ・ポートフォリオに加わりました。これにより、コスト効果の高いコンパクトな BGA フットプリントで、より水準の高いプロセッシング・パワー、熱効率、高速 I/O 接続が実現します。 このプロセッサーを活用することで、広範なストレージ、ネットワーク、エッジ・システムで、シームレスかつスケーラブルな CPU パフォーマンスを実現することが可能となります。AMD Ryzen™ Embedded V3000プロセッサーは、過酷なワークロード要件が求められる24時間365日の運用環境において、エンタープライズ級の信頼性が得られるように最適化されています。<br>
                 <br>
+                特徴<br>
                 <br>
+                電力効率＆パッケージング。<br>
+                ★最大 8 個のハイパフォーマンス "Zen 3" x86 コア<br>
+                ★10-54W TDP 範囲<br>
+                ★リッドレス BGA パッケージ<br>
                 <br>
+                エンタープライズ級の機能。<br>
+                ★広範な RAS (信頼性、可用性、保守性) 適用範囲<br>
+                ★最大10年間の計画的な製品供給を保証<br>
+                ★AMD セキュア・プロセッサー & AMD メモリー・ガード<br>
                 <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                強力な統合。<br>
+                ★最大 20L PCIe® Gen4<br>
+                ★デュアル 10Gb イーサネット MAC<br>
+                ★最大 4800MT/s のデュアル 64 ビット DDR5 (ECC 対応)<br>
                 <br>
             </div>
             <div class="box-img">
