--- a/008/008.html
+++ b/008/008.html
@@ -36,13 +36,13 @@
                 <br>
             </div>
             <div class="box-img">
-                <img src="./IB952.jpg" alt="Image File"><br>
+                <img src="./V3000-Embedded.jpg" alt="Image File"><br>
             </div>
             <div class="box-img">
-                <img src="./MI993.jpg" alt="Image File"><br>
+                <img src="./V3000-Storage.jpg" alt="Image File"><br>
             </div>
             <div class="box-img">
-                <img src="./ET977.jpg" alt="Image File"><br>
+                <img src="./V3000-Solutions.jpg" alt="Image File"><br>
             </div>
         </p>
         <hr width="100%" color="green" size="1px"/>
