--- a/009/009.html
+++ b/009/009.html
@@ -28,13 +28,13 @@
                 <br>
             </div>
             <div class="box-img">
-                <img src="./V3000-Embedded.jpg" alt="Image File"><br>
+                <img src="./221663251-E_en_300x250 (Med R.jpg" alt="Image File"><br>
             </div>
             <div class="box-img">
-                <img src="./V3000-Storage.jpg" alt="Image File"><br>
+                <img src=".221663251-E_en_AMD EPYC (fortify)300x250 (Med Rec)/.jpg" alt="Image File"><br>
             </div>
             <div class="box-img">
-                <img src="./V3000-Solutions.jpg" alt="Image File"><br>
+                <img src="./221663255-E_en_300x250 (Med Rec).jpg" alt="Image File"><br>
             </div>
         </p>
         <hr width="100%" color="green" size="1px"/>
