--- a/010/010.html
+++ b/010/010.html
@@ -13,18 +13,26 @@
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
             <div class="box-mail">
-                関連ニュース等、すでにご存じとは思いますが、AMD社より第4世代Zenコア採用サーバー向けプロセッサーAMD EPYC™ 9004シリーズが発表されました。これは、コードネーム”Genoa"と呼ばれておりました。<br>
+                前回は、AMD EPYC™ プロセッサー紹介をさせていただきました。今回は、このプロセッサについて、技術詳細を複数回に分け、ご紹介をさせていただければと希望いたします。技術詳説の第一回目タイトルは、「ハイブリッドマルチダイアーキテクチャー」です。<br>
                 <br>
-                今回は、その製品特徴をご案内させていただきます。また、継続して本メールマガジンシにて詳細技術情報のご案内を翌週以降にて配信を予定しております。どうぞ、ご期待ください。<br>
+                AMD EPYC™ プロセッサーの最も重要なイノベーションは、ハイブリッドマルチダイアーキテクチャです。CPU コアと I/O機能を、2つのダイへ分離し、必要に適したタイムラインで開発製品化出来るようにいたしました。この第4世代プロセッサでは、「Zen 4」CPUダイは5nmテクノロジで製造され、I/Oダイは6nm テクノロジで製造されています。AMD EPYC™ プロセッサーは、最大12個のCPUで構成されています。<br>
                 <br>
-                パフォーマンスと効率性をサポート: <br>
-                1つのプロセッサーに最大96コアを搭載しているため、企業はより少ない台数で強力なサーバーを導入し、コンピューティングの需要に応え続けることができます。これにより、データセンター内の柔軟性を高め、ビジネスの持続可能性と利益に貢献することが可能になります。<br>
+                これらのテクノロジーにより、以下のメリットをもたらします。<br>
                 <br>
-                データの安全性を確保:<br>
-                AMDは、「Security by Design」アプローチを通じて、x86 CPUのセキュリティー機能の強化を継続的に実施しています。第4世代AMD EPYCプロセッサー・シリーズでは、物理的および仮想的な保護レイヤーを提供するAMD Infinity Guardを拡張しました。第4世代EPYCプロセッサーは、前世代と比較して2倍の暗号化キーを備えており、ローカル、クラウド、ストレージに保存されているデータも安全に保護します。<br>
+                ソフトウエアライセンスの最大活用：<br>
+                ライセンスを最大限に活用したいため、コア数が少なく、クロック速度が高いプロセッサセットを提供しています。 たとえば、8 つのコアを持つ単一の CPUダイを使用する代わりに、8つのコアをそれぞれ1つのコアを持つ8つのCPUダイに分散させることができます。 これにより、プロセッサ全体へ熱負荷が分散され、クロック周波数を上げることができます。 この8コアの例では、各コアが独自のメモリチャネルへ接続されます。 これにより、メモリアクセスがメモリチャネル全体に分散され、メモリレイテンシの短縮に役立ちます.
                 <br>
-                業界における最新機能とアーキテクチャーを採用:<br>
-                本プロセッサーは、ワークロードの需要に沿ったコア数と周波数を選択するだけで、「オールイン」の機能セットを提供します。第4世代AMD EPYCプロセッサーは、AIおよびMLアプリケーションに不可欠なDDR5メモリーとPCIe® Gen 5に対応しています。さらに、メモリーを拡張するCXL® 1.1+をサポートし、大きなインメモリー・ワークロード容量に対する需要に対応できるよう支援します。<br>
+                エンジニアリングパフォーマンスの向上:<br>
+                AMD 3D V-Cache™テクノロジーです。 文字通りこのスタックは各CPUダイ上へキャッシュメモリを実装。 これは、現在の2D技術の200倍以上の相互接続密度を可能にするDirect Copper-to-Copper Hybrid Bondingプロセスを使用し、Solder Bumpsを使用する相互接続技術の15 倍以上の密度を可能として、この革新により、3D V-キャッシュを備えた第 3 世代プロセッサで768MBのL3キャッシュが提供されます。<br>
+                <br>
+                クラウドコンピューティング環境の向上:<br>
+                8コアを超えるCPUダイは、クラウドコンピューティング環境の全体的な密度を高める可能性を秘めており、サーバーごとにより多くの仮想マシンをホストするのに役立ちます<br>
+                <br>
+                機械学習ワークロードの高速化:<br>
+                最新のコア設計には、AVX-512 命令 (256ビットデータパス) のサポートが含まれており、BFLOAT16 や Vectorized Neural Network Instruction (VNNI) などのAI および ML ワークロードの高速化に役立ちます。<br>
+                <br>
+                製品製造の簡略化:<br>
+                マルチダイアーキテクチャは、製造プロセスの無駄を削減するのに役立ちます。 シリコンウエハー上に (比較的) 小さい CPU ダイを多数配置すると、避けられない製造上の欠陥は、テスト不良とし、プロセッサ製造へは利用しない少数の不良ダイとして処分します。 これらを比較すると、ウェーハに含まれるプロセッサの数が少なく、より大型のモノリシック プロセッサの場合、1 つの欠陥によってプロセッサ全体が不合格になり、ウェーハごとに製造されるプロセッサの平均数という点で全体の歩留まりが低下する可能性があります。<br>
                 <br>
             </div>
             <div class="box-img">
