--- a/010/010.html
+++ b/010/010.html
@@ -8,7 +8,7 @@
 
     <body>
         <h3>Date of Issued :2022/12/13</h3>
-        <h3>Subject : 第四世代 <br>
+        <h3>Subject : AMD EPYC™ プロセッサー技術詳細「ハイブリッドマルチダイアーキテクチャー」 <br>
         <h3>Message Contents :</h3>
         <hr width="100%" color="green" size="1px"/>
         <p class="main-text">
